# Difix3D

./: .gitignore  convert_all_models.py  convert_pipeline_to_model.py  pixi.toml  pyproject.toml
difix3d/: __init__.py  convert_pipeline_to_model.py  dataset.py  export_difix.py  inference_difix.py  inference_pipe.py  loss.py  model.py  mv_unet.py  pipeline_difix.py  train_difix.py
examples/: utils.py
examples/gsplat/: lib_bilagrid.py  simple_trainer_difix3d.py  utils.py
examples/gsplat/datasets/: colmap.py  normalize.py  traj.py
examples/nerfstudio/difix3d/: difix3d.py  difix3d_config.py  difix3d_datamanager.py  difix3d_field.py  difix3d_pipeline.py  difix3d_trainer.py
