[project]
name = "difix3d"
version = "0.1.0"
description = "Difix3D: 3D-aware diffusion model for image editing"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}

authors = [
  {name = "Difix3D Contributors"}
]

dependencies = [
  "torch",
  "torchvision", 
  "torchmetrics",
  "wandb",
  "imageio[ffmpeg]",
  "einops",
  "lpips",
  "xformers",
  "peft==0.9.0",
  "diffusers==0.25.1",
  "huggingface-hub==0.25.1",
  "transformers==4.38.0",
  "numpy",
  "Pillow",
  "tqdm",
]

[tool.setuptools.packages.find]
include = ["difix3d"]
exclude = ["examples", "assets"]


[build-system]
# Hatching
requires = ["hatchling>=1.5.0"]
build-backend = "hatchling.build"

[project.scripts]  # Optional
difix_inference = "difix3d.inference_difix:main"
difix_pipe = "difix3d.inference_pipe:main"

[tool.setuptools.package-data]

[tool.pyright]
reportInvalidTypeForm = "none"
reportGeneralTypeIssues = "none"


[tool.pytest.ini_options]
filterwarnings = [
    # disable "UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor"
    "ignore::UserWarning"  
] 